--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
-﻿@model LoginViewModel
-<title>Login</title>
-<h2>Login</h2>
-<form asp-controller="Login" asp-action="Index" method="post">
+﻿@model RegisterViewModel
+<h2>Register</h2>
+
+<form asp-controller="Account" asp-action="Register" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Email"></label>
@@ -14,11 +14,9 @@
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <div class="checkbox">
-            <label>
-                <input asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
-            </label>
-        </div>
+        <label asp-for="ConfirmPassword"></label>
+        <input asp-for="ConfirmPassword" type="password" class="form-control" />
+        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary">Register</button>
 </form>
