--- a/Views/Matches/Index.cshtml
+++ b/Views/Matches/Index.cshtml
@@ -1,22 +1,157 @@
-﻿@{
-    ViewData["Title"] = "Matches";
-}
-
-@model IEnumerable<Match>
+﻿@model IEnumerable<ProjectASP.Models.Match>
 
 <div class="matches-container">
     @foreach (var match in Model)
     {
-        <div class="match @((match.IsPlayed) ? "played" : "upcoming")">
-            @if (!match.IsPlayed || (match.ScorePlayerOne == 0 && match.ScorePlayerTwo == 0))
-            {
-                <span class="players">@match.PlayerOne<span class="score">[TBD]  </span> @match.PlayerTwo</span>
-            }
-            else
-            {
-                <span class="players">@match.PlayerOne<span class="score">@match.ScorePlayerOne - @match.ScorePlayerTwo  </span> @match.PlayerTwo</span>
-            }
-            <span class="date">@match.Datum.ToString("dd MMM yyyy")</span>
+        <div class="match-container">
+            <div class="match @((match.IsPlayed) ? "played" : "upcoming")">
+                @if (!match.IsPlayed || (match.ScorePlayerOne == 0 && match.ScorePlayerTwo == 0))
+                {
+                    <span class="players">@match.PlayerOne<span class="score">[TBD]  </span> @match.PlayerTwo</span>
+                }
+                else
+                {
+                    <span class="players">@match.PlayerOne<span class="score">@match.ScorePlayerOne - @match.ScorePlayerTwo  </span> @match.PlayerTwo</span>
+                }
+                <span class="date">@match.Datum.ToString("dd MMM yyyy")</span>
+
+                <div class="buttons-container">
+                    @if (!match.IsPlayed || (match.ScorePlayerOne == 0 && match.ScorePlayerTwo == 0))
+                    {
+                        <button class="btn btn-primary btn-sm" onclick="showScoreInput(@match.MatchId)">Vul scores in</button>
+                    }
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <button class="btn btn-danger btn-sm delete-match-btn" onclick="deleteMatch(@match.MatchId)">Verwijder Match</button>
+                    }
+                </div>
+            </div>
         </div>
     }
 </div>
+
+@if (User.IsInRole("Admin"))
+{
+    <button class="btn btn-primary mb-3" onclick="showAddMatchModal()">Voeg match toe</button>
+}
+
+<!-- Modaal venster voor het toevoegen van een nieuwe match -->
+<div class="modal fade" id="addMatchModal" tabindex="-1" aria-labelledby="addMatchModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addMatchModalLabel">Voeg match toe</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="addMatchForm">
+                    <div class="mb-3">
+                        <label for="playerOne" class="form-label">Speler 1</label>
+                        <select class="form-select" id="playerOne" name="playerOne">
+                            <!-- Opties voor speler 1 worden dynamisch ingevuld -->
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="playerTwo" class="form-label">Speler 2</label>
+                        <select class="form-select" id="playerTwo" name="playerTwo">
+                            <!-- Opties voor speler 2 worden dynamisch ingevuld -->
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="matchDate" class="form-label">Datum</label>
+                        <input type="date" class="form-control" id="matchDate" name="matchDate">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Match toevoegen</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+        function showAddMatchModal() {
+            $('#addMatchModal').modal('show');
+            populateUserDropdowns();
+        }
+
+        async function populateUserDropdowns() {
+            // Haal gebruikersnamen op uit de database
+            const response = await fetch('@Url.Action("GetUsers", "Matches")');
+            const users = await response.json(); // Haal de JSON data uit de respons
+
+            // Vul dropdown menu's met gebruikersnamen
+            users.forEach(user => {
+                $('#playerOne').append($('<option>', {
+                    value: user.Id,
+                    text: user.firstName + ' ' + user.lastName
+                }));
+                $('#playerTwo').append($('<option>', {
+                    value: user.Id,
+                    text: user.firstName + ' ' + user.lastName
+                }));
+            });
+        }
+
+        $('#addMatchForm').submit(async function (event) {
+            event.preventDefault();
+
+            const formData = {
+                PlayerOne: $('#playerOne').val(),
+                PlayerTwo: $('#playerTwo').val(),
+                ScorePlayerOne: 0,
+                ScorePlayerTwo: 0,
+                IsPlayed: false,
+                Datum: $('#matchDate').val()
+            };
+
+            console.log(formData)
+
+            try {
+                const response = await fetch('@Url.Action("Add", "Matches")', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(formData)
+                });
+
+                if (response.ok) {
+                    window.location.href = '@Url.Action("Index", "Matches")';
+                } else {
+                    console.error('Toevoegen van match is mislukt');
+                }
+            } catch (error) {
+                console.error('Er is een fout opgetreden bij het toevoegen van de match:', error);
+            }
+        });
+
+        function deleteMatch(matchId) {
+            const confirmation = confirm("Weet je zeker dat je deze match wilt verwijderen?");
+
+            if (confirmation) {
+                fetch('@Url.Action("Delete", "Matches")', {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ id: matchId }) // Zorg ervoor dat het matchId correct in een JSON-object is opgenomen
+                })
+                    .then(response => {
+                        if (response.ok) {
+                            alert('Match succesvol verwijderd.');
+                            // Herlaad de pagina
+                            window.location.reload();
+                        } else {
+                            console.error('Fout bij het verwijderen van de match.');
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Er is een fout opgetreden bij het verwijderen van de match:', error);
+                    });
+            }
+        }
+
+
+    </script>
+}
