--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,15 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-     
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+            <div class="text-center">
+                <h1 class="display-4">Welkom bij de Darts Competitie</h1>
+                <p class="lead">Hier houden we al onze dartswedstrijden en resultaten bij.</p>
+                <p>Of je nu een ervaren darter bent of net begint, we hebben iets voor jou. Doe mee en beleef plezier aan het darten!</p>
+                <a href="/Matches?ronde=ARonde" class="btn btn-primary btn-lg">Bekijk de wedstrijden</a>
+            </div>
+        </div>
+    </div>
 </div>
